--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "BDNorthwind": "server=localhost; database=Northwind; port=3306; uid=root; pwd=root"
+    "BDNorthwind": "Server=localhost; database=Northwind; port=3306; uid=root; pwd=root"
   },
   "Logging": {
       "LogLevel": {
