--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "BDNorthwind": "Server=localhost; database=Northwind; port=3306; uid=root; pwd=root"
+    "BDNorthwind": "Server=dbnorthwind.mysql.database.azure.com; Port=3306; Database=northwind; Uid=admin-northwind@dbnorthwind; Pwd=Passw0rd!; SslMode=Preferred;"
   },
   "Logging": {
       "LogLevel": {
