--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,9 @@
       }
     },
   "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    },
     "Clients": {
       "Autorizacion": {
         "Profile": "IdentityServerSPA"
